add addmember to comprehensive example

--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -105,7 +105,7 @@ function removeMember(userId: string): Promise<OrganizationMembership>;
 
 ## Organization membership methods example
 
-The following example demonstrates how to use the organization membership methods to manage the members of an organization. To ease the development process, the response or error message of a method will be displayed on the user interface as well.
+The following example demonstrates how to use the organization membership methods to manage the members of an organization. To ease the development process, the response or error message of a method will be displayed on the user interface.
 
 <InjectKeys>
 
@@ -158,6 +158,12 @@ The following example demonstrates how to use the organization membership method
         <tbody id="memberships_table_body"></tbody>
       </table>
 
+      <div id="add-member-container">
+        <h2>Add member</h2>
+        <input id="member-user-id" placeholder="Enter member's user ID" />
+        <button id="add-member">Add member</button>
+      </div>
+
       <p>Response:</p>
       <pre id="response"></pre>
 
@@ -192,9 +198,10 @@ The following example demonstrates how to use the organization membership method
             row.insertCell().textContent = membership.role;
 
             // Add administrative actions:
-            // Update a member's role and remove a member.
+            // Add and remove a member, and update a member's role.
             if (isAdmin) {
-              // Show update and remove buttons
+              // Show add, update, remove member buttons
+              document.getElementById("add-member-container").removeAttribute("hidden");
               document.getElementById("update-role-head").removeAttribute("hidden");
               document.getElementById("remove-member-head").removeAttribute("hidden");
 
@@ -240,6 +247,26 @@ The following example demonstrates how to use the organization membership method
                   });
               });
               row.insertCell().appendChild(removeBtn);
+
+              // Add a new member to the organization
+              document.getElementById("add-member")
+                .addEventListener("click", () => {
+                  const userId = document.getElementById("member-user-id").value;
+
+                  organization.addMember({
+                      userId, role: "org:member"
+                    })
+                    .then((res) => {
+                      document.getElementById("response").innerHTML =
+                        JSON.stringify(res);
+                    })
+                    .catch((error) => {
+                      document.getElementById("error-container").removeAttribute("hidden");
+                      document.getElementById("error-message").innerHTML =
+                        error.errors[0].longMessage;
+                      console.log("An error occurred:", error.errors);
+                    });
+                });
             }
           });
         } catch (error) {
@@ -348,6 +375,12 @@ The following example demonstrates how to use the organization membership method
         <tbody id="memberships_table_body"></tbody>
       </table>
 
+      <div id="add-member-container">
+        <h2>Add member</h2>
+        <input id="member-user-id" placeholder="Enter member's user ID" />
+        <button id="add-member">Add member</button>
+      </div>
+
       <p>Response:</p>
       <pre id="response"></pre>
 
@@ -382,9 +415,10 @@ The following example demonstrates how to use the organization membership method
                     row.insertCell().textContent = membership.role;
 
                     // Add administrative actions:
-                    // Update a member's role and remove a member.
+                    // Add and remove a member, and update a member's role.
                     if (isAdmin) {
-                      // Show update and remove buttons
+                      // Show add, update, remove member buttons
+                      document.getElementById("add-member-container").removeAttribute("hidden");
                       document.getElementById("update-role-head").removeAttribute("hidden");
                       document.getElementById("remove-member-head").removeAttribute("hidden");
 
@@ -430,6 +464,26 @@ The following example demonstrates how to use the organization membership method
                           });
                       });
                       row.insertCell().appendChild(removeBtn);
+
+                      // Add a new member to the organization
+                      document.getElementById("add-member")
+                        .addEventListener("click", () => {
+                          const userId = document.getElementById("member-user-id").value;
+
+                          organization.addMember({
+                            userId, role: "org:member"
+                          })
+                          .then((res) => {
+                            document.getElementById("response").innerHTML =
+                              JSON.stringify(res);
+                          })
+                          .catch((error) => {
+                            document.getElementById("error-container").removeAttribute("hidden");
+                            document.getElementById("error-message").innerHTML =
+                              error.errors[0].longMessage;
+                            console.log("An error occurred:", error.errors);
+                          });
+                        });
                     }
                   });
                 } catch (error) {
