Move SAML to its own dedicated authentication section

--- a/docs/authentication/saml/overview.mdx
+++ b/docs/authentication/saml/overview.mdx
@@ -1,9 +1,9 @@
 ---
-title: SAML at Clerk (Beta)
+title: SAML (Beta)
 description: Clerk supports Enterprise SSO via the SAML protocol so that you can create authentication strategies for Identity Providers, such as Okta.
 ---
 
-# SAML at Clerk (Beta)
+# SAML (Beta)
 
 Clerk supports Enterprise SSO via the SAML protocol so that you can create authentication strategies for Identity Providers, such as Okta.
 
