--- a/docs/custom-flows/saml-connections.mdx
+++ b/docs/custom-flows/saml-connections.mdx
@@ -5,7 +5,7 @@ description: Learn how to leverage the Clerk SDK to build a completely custom SA
 
 # SAML connections
 
-In case our default [SAML flow](/docs/authentication/saml-at-clerk) doesn’t cover your needs, you can leverage the Clerk SDK to build a completely custom SAML flow.
+If [the default SAML flow](/docs/authentication/saml/overview) doesn’t cover your needs, you can build a custom SAML flow with the Clerk SDK.
 
 <Callout type="info">
   You still need to configure your instance through the Clerk Dashboard. You can create a SAML connection by visiting the **[Enterprise Connections](https://dashboard.clerk.com/last-active?path=user-authentication/enterprise-connections)** page.
