add syntax highlighting

--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -164,7 +164,7 @@ The following example demonstrates how to use the organization membership method
         <button id="add-member">Add member</button>
       </div>
 
-      <p>Response:</p>
+      <h2>Response:</p>
       <pre id="response"></pre>
 
       <script type="module" src="/main.js"></script>
@@ -174,7 +174,7 @@ The following example demonstrates how to use the organization membership method
 
   And your JavaScript file should look like this:
 
-  ```js filename="main.js" {13,40,59, }
+  ```js filename="main.js" {13,41,60,79}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
@@ -253,9 +253,7 @@ The following example demonstrates how to use the organization membership method
                 .addEventListener("click", () => {
                   const userId = document.getElementById("member-user-id").value;
 
-                  organization.addMember({
-                      userId, role: "org:member"
-                    })
+                  organization.addMember({ userId, role: "org:member" })
                     .then((res) => {
                       document.getElementById("response").innerHTML =
                         JSON.stringify(res);
@@ -330,7 +328,7 @@ The following example demonstrates how to use the organization membership method
   </Tab>
 
   <Tab>
-  ```html filename="index.html"
+  ```html filename="index.html" {74,102,121,140}
   <!doctype html>
   <html lang="en">
     <head>
@@ -381,7 +379,7 @@ The following example demonstrates how to use the organization membership method
         <button id="add-member">Add member</button>
       </div>
 
-      <p>Response:</p>
+      <h2>Response:</p>
       <pre id="response"></pre>
 
       <!-- Initialize Clerk with your
@@ -470,9 +468,7 @@ The following example demonstrates how to use the organization membership method
                         .addEventListener("click", () => {
                           const userId = document.getElementById("member-user-id").value;
 
-                          organization.addMember({
-                            userId, role: "org:member"
-                          })
+                          organization.addMember({ userId, role: "org:member" })
                           .then((res) => {
                             document.getElementById("response").innerHTML =
                               JSON.stringify(res);
