address code review suggestions

--- a/docs/references/javascript/user/totp.mdx
+++ b/docs/references/javascript/user/totp.mdx
@@ -5,15 +5,15 @@ description: Learn about the methods on the User object that allow you to genera
 
 # Time-based One-time Password (TOTP)
 
+<Callout type="warning">
+  **Authenticator application** and **Backup codes** must be enabled as multi-factor strategies in your Clerk settings for these methods to work. See the [Multi-factor authentication](/docs/authentication/configuration/sign-up-sign-in-options#set-up-multi-factor-authentication) section to learn more.
+</Callout>
+
 Clerk supports multi-factor authentication (MFA) using Time-based One-time Password (TOTP) as a second factor. TOTP is a widely used standard for generating one-time passwords that are valid for a short period of time.
 
 These methods on the [`User`](/docs/references/javascript/user/user) object are related to TOTP functionality and allow you to generate and verify TOTP secrets, disable TOTP, and create backup codes for user authentication.
 
-To see a complete example of how to use these methods, see the [TOTP example](#totp-example) section.
-
-<Callout type="warning">
-  Multi-factor authentication must be enabled in your Clerk settings for these methods to work. See the [Multi-factor authentication](/docs/authentication/configuration/sign-in-sign-up-options#set-up-multi-factor-authentication) section to learn more.
-</Callout>
+To see how all these methods work together, check out the [comprehensive example](#totp-example).
 
 ## `createTOTP()`
 
@@ -27,7 +27,7 @@ function createTOTP(): Promise<TOTPResource>;
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[TOTPResource](#totp-resource)\></code> | This method returns a `Promise` which resolves with the newly created TOTP object. |
+| <code>Promise\<[TOTPResource](#totp-resource)\></code> | This method returns a `Promise` that resolves to the newly created TOTP object. |
 
 ## `verifyTOTP()`
 
@@ -47,7 +47,7 @@ function verifyTOTP(params: VerifyTOTPParams): Promise<TOTPResource>;
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[TOTPResource](#totp-resource)\></code> | This method returns a `Promise` which resolves with the newly verified TOTP object. |
+| <code>Promise\<[TOTPResource](#totp-resource)\></code> | This method returns a `Promise` that resolves to the newly verified TOTP object. |
 
 ## `disableTOTP()`
 
@@ -61,7 +61,7 @@ function disableTOTP(): Promise<DeletedObject>;
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[DeletedObject](/docs/references/javascript/types/deleted-object)\></code> | This method returns a `Promise` which resolves with the reference to the deleted TOTP object. |
+| <code>Promise\<[DeletedObject](/docs/references/javascript/types/deleted-object)\></code> | This method returns a `Promise` that resolves to the reference to the deleted TOTP object. |
 
 ## `createBackupCode()`
 
@@ -79,7 +79,7 @@ function createBackupCode(): Promise<BackupCodeResource>;
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[BackupCodeResource](#backup-code-resource)\></code> | This method returns a `Promise` which resolves with the newly created backup code. |
+| <code>Promise\<[BackupCodeResource](#backup-code-resource)\></code> | This method returns a `Promise` that resolves to the newly created backup code. |
 
 ## Types
 
@@ -106,7 +106,12 @@ function createBackupCode(): Promise<BackupCodeResource>;
 
 ## TOTP example
 
-The following example demonstrates how to use the TOTP methods to create and verify a TOTP secret, disable TOTP, and create backup codes for a user. Upon any error, the example will display the error message to the user.
+The following example demonstrates how to use the TOTP methods to create and verify a TOTP secret, disable TOTP, and create backup codes for a user. To ease the development process, the response or error message of a method will be displayed on the user interface.
+
+The following example assumes:
+
+- you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application
+- you have [enabled **Authenticator application** and **Backup codes** as multi-factor strategies in your Clerk Dashboard](/docs/authentication/configuration/sign-up-sign-in-options#authentication-strategies)
 
 <InjectKeys>
 
@@ -148,7 +153,7 @@ The following example demonstrates how to use the TOTP methods to create and ver
           <button id="verify-totp">Verify TOTP</button>
         </div>
 
-        <p>Response:</p>
+        <h2>Response:</h2>
         <pre id="response"></pre>
 
         <script type="module" src="/main.js"></script>
@@ -270,7 +275,7 @@ The following example demonstrates how to use the TOTP methods to create and ver
       <button id="verify-totp">Verify TOTP</button>
     </div>
 
-    <p>Response:</p>
+    <h2>Response:</h2>
     <pre id="response"></pre>
 
     <!-- Initialize Clerk with your
