check for active organization in code examples

--- a/docs/references/javascript/clerk/organization-methods.mdx
+++ b/docs/references/javascript/clerk/organization-methods.mdx
@@ -9,7 +9,7 @@ These methods on the [`Clerk`](/docs/references/javascript/clerk/clerk) class al
 
 The following examples assume:
 - you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application
-- you have enabled the [Organizations feature](/docs/organizations/overview) in your Clerk Dashboard
+- you have [enabled the Organizations feature in your Clerk Dashboard](/docs/organizations/overview#enable-organizations-in-your-application)
 
 ## `getOrganization()`
 
