--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -1,11 +1,16 @@
 ---
-title: Organization
+title: Organization object
 description: The Organization object holds information about an organization, as well as methods for managing it.
 ---
 
-# `Organization`
+# `Organization` object
 
 The `Organization` object holds information about an organization, as well as methods for managing it.
+
+The following examples assume:
+
+- you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application
+- you have [enabled the Organizations feature in your Clerk Dashboard](/docs/organizations/overview#enable-organizations-in-your-application)
 
 ## Properties
 
@@ -53,7 +58,7 @@ function update(params: UpdateOrganizationParams): Promise<Organization>;
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-```js filename="main.js"
+```js filename="main.js" {10}
 import Clerk from '@clerk/clerk-js';
 
 // Initialize Clerk with your Clerk publishable key
@@ -61,13 +66,24 @@ const clerk = new Clerk('{{pub_key}}');
 await clerk.load();
 
 if (clerk.user) {
-  // Get the current organization
-  const currentOrganization = clerk.organization;
-
-  // Update the organization's name
-  currentOrganization.update({ name: "New Name" })
+  // Check for an active organization
+  if (clerk.organization){
+    await clerk.organization.update({ name: "New Name" })
     .then((res) => console.log(res))
     .catch((error) => console.log("An error occurred:", error.errors));
+  } else {
+    // If there is no active organization,
+    // mount Clerk's <OrganizationSwitcher />
+    // to allow the user to set an organization as active
+    document.getElementById("app").innerHTML = `
+      <h2>Select an organization to set it as active</h2>
+      <div id="org-switcher"></div>
+    `;
+
+    const orgSwitcherDiv = document.getElementById("org-switcher");
+
+    clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+  }
 } else {
   document.getElementById("app").innerHTML = `
     <div id="sign-in"></div>
@@ -79,7 +95,7 @@ if (clerk.user) {
 }
 ```
 
-```html filename="index.html"
+```html filename="index.html" {19}
   <div id="app"></div>
 
   <!-- Initialize Clerk with your
@@ -96,13 +112,24 @@ if (clerk.user) {
     window.addEventListener("load", async function () {
       await Clerk.load();
       if (Clerk.user) {
-        // Get the current organization
-        const currentOrganization = Clerk.organization;
+        // Check for an active organization
+        if (Clerk.organization){
+          await Clerk.organization.update({ name: "New Name" })
+            .then((res) => console.log(res))
+            .catch((error) => console.log("An error occurred:", error.errors));
+        } else {
+          // If there is no active organization,
+          // mount Clerk's <OrganizationSwitcher />
+          // to allow the user to set an organization as active
+          document.getElementById("app").innerHTML = `
+            <h2>Select an organization to set it as active</h2>
+            <div id="org-switcher"></div>
+          `;
 
-        // Update the organization's name
-        currentOrganization.update({ name: "New Name" })
-          .then((res) => console.log(res))
-          .catch((error) => console.log("An error occurred:", error.errors));
+          const orgSwitcherDiv = document.getElementById("org-switcher");
+
+          Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+        }
       } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
@@ -140,7 +167,7 @@ function destroy(): Promise<void>;
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-```js filename="main.js"
+```js filename="main.js" {10}
 import Clerk from '@clerk/clerk-js';
 
 // Initialize Clerk with your Clerk publishable key
@@ -148,13 +175,24 @@ const clerk = new Clerk('{{pub_key}}');
 await clerk.load();
 
 if (clerk.user) {
-  // Get the current organization
-  const currentOrganization = clerk.organization;
+  // Check for an active organization
+  if (clerk.organization){
+    await clerk.organization.destroy()
+      .then((res) => console.log(res))
+      .catch((error) => console.log("An error occurred:", error.errors));
+  } else {
+    // If there is no active organization,
+    // mount Clerk's <OrganizationSwitcher />
+    // to allow the user to set an organization as active
+    document.getElementById("app").innerHTML = `
+      <h2>Select an organization to set it as active</h2>
+      <div id="org-switcher"></div>
+    `;
 
-  // Deletes the organization
-  currentOrganization.delete()
-    .then((res) => console.log(res))
-    .catch((error) => console.log("An error occurred:", error.errors));
+    const orgSwitcherDiv = document.getElementById("org-switcher");
+
+    clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+  }
 } else {
   document.getElementById("app").innerHTML = `
     <div id="sign-in"></div>
@@ -166,7 +204,7 @@ if (clerk.user) {
 }
 ```
 
-```html filename="index.html"
+```html filename="index.html" {19}
   <div id="app"></div>
 
   <!-- Initialize Clerk with your
@@ -183,13 +221,24 @@ if (clerk.user) {
     window.addEventListener("load", async function () {
       await Clerk.load();
       if (Clerk.user) {
-        // Get the current organization
-        const currentOrganization = Clerk.organization;
+        // Check for an active organization
+        if (Clerk.organization){
+          await Clerk.organization.destroy()
+            .then((res) => console.log(res))
+            .catch((error) => console.log("An error occurred:", error.errors));
+        } else {
+          // If there is no active organization,
+          // mount Clerk's <OrganizationSwitcher />
+          // to allow the user to set an organization as active
+          document.getElementById("app").innerHTML = `
+            <h2>Select an organization to set it as active</h2>
+            <div id="org-switcher"></div>
+          `;
 
-        // Deletes the organization
-        currentOrganization.delete()
-          .then((res) => console.log(res))
-          .catch((error) => console.log("An error occurred:", error.errors));
+          const orgSwitcherDiv = document.getElementById("org-switcher");
+
+          Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+        }
       } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
@@ -256,7 +305,7 @@ function setLogo(params: SetOrganizationLogoParams): Promise<Organization>;
 
     And your JavaScript file should look like this:
 
-    ```js filename="main.js"
+    ```js filename="main.js" {14}
     import Clerk from '@clerk/clerk-js';
 
     // Initialize Clerk with your Clerk publishable key
@@ -264,18 +313,29 @@ function setLogo(params: SetOrganizationLogoParams): Promise<Organization>;
     await clerk.load();
 
     if (clerk.user) {
-      // Get the current organization
-      const currentOrganization = clerk.organization;
+      // Check for an active organization
+      if (clerk.organization){
+        // Update the organization's logo
+        document.getElementById("upload-logo").addEventListener("click", () => {
+          const orgLogo = document.getElementById("org-logo").files[0];
 
-      // Update the organization's logo
-      document.getElementById("upload-logo").addEventListener("click", () => {
-        const orgLogo = document.getElementById("org-logo").files[0];
-        console.log(orgLogo);
+          clerk.organization.setLogo({ file: orgLogo })
+            .then((res) => console.log(res))
+            .catch((error) => console.log("An error occurred:", error.errors));
+        });
+      } else {
+        // If there is no active organization,
+        // mount Clerk's <OrganizationSwitcher />
+        // to allow the user to set an organization as active
+        document.getElementById("app").innerHTML = `
+          <h2>Select an organization to set it as active</h2>
+          <div id="org-switcher"></div>
+        `;
 
-        currentOrganization.setLogo({ file: orgLogo })
-          .then((res) => console.log(res))
-          .catch((error) => console.log("An error occurred:", error.errors));
-      });
+        const orgSwitcherDiv = document.getElementById("org-switcher");
+
+        clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+      }
     } else {
       document.getElementById("app").innerHTML = `
         <div id="sign-in"></div>
@@ -289,7 +349,7 @@ function setLogo(params: SetOrganizationLogoParams): Promise<Organization>;
   </Tab>
 
   <Tab>
-  ```html filename="index.html"
+  ```html filename="index.html" {27}
     <div id="app"></div>
 
     <input type="file" id="org-logo" />
@@ -308,18 +368,31 @@ function setLogo(params: SetOrganizationLogoParams): Promise<Organization>;
     <script>
       window.addEventListener("load", async function () {
         await Clerk.load();
+
         if (Clerk.user) {
-          // Get the current organization
-          const currentOrganization = Clerk.organization;
+          // Check for an active organization
+          if (Clerk.organization){
+            // Update the organization's logo
+            document.getElementById("upload-logo").addEventListener("click", () => {
+              const orgLogo = document.getElementById("org-logo").files[0];
 
-          // Update the organization's logo
-          document.getElementById("upload-logo").addEventListener("click", () => {
-            const orgLogo = document.getElementById("org-logo").files[0];
+              Clerk.organization.setLogo({ file: orgLogo })
+                .then((res) => console.log(res))
+                .catch((error) => console.log("An error occurred:", error.errors));
+            });
+          } else {
+            // If there is no active organization,
+            // mount Clerk's <OrganizationSwitcher />
+            // to allow the user to set an organization as active
+            document.getElementById("app").innerHTML = `
+              <h2>Select an organization to set it as active</h2>
+              <div id="org-switcher"></div>
+            `;
 
-            currentOrganization.setLogo({ file: orgLogo })
-              .then((res) => console.log(res))
-              .catch((error) => console.log("An error occurred:", error.errors));
-          });
+            const orgSwitcherDiv = document.getElementById("org-switcher");
+
+            Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+          }
         } else {
           document.getElementById("app").innerHTML = `
             <div id="sign-in"></div>
@@ -390,7 +463,7 @@ An *experimental* interface that includes information about a user's permission.
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-```js filename="main.js"
+```js filename="main.js" {10}
 import Clerk from '@clerk/clerk-js';
 
 // Initialize Clerk with your Clerk publishable key
@@ -398,13 +471,24 @@ const clerk = new Clerk('{{pub_key}}');
 await clerk.load();
 
 if (clerk.user) {
-  // Get the current organization
-  const currentOrganization = clerk.organization;
+  // Check for an active organization
+  if (clerk.organization) {
+    await clerk.organization.getRoles()
+      .then((res) => console.log(res))
+      .catch((error) => console.log("An error occurred:", error.errors));
+  }else {
+    // If there is no active organization,
+    // mount Clerk's <OrganizationSwitcher />
+    // to allow the user to set an organization as active
+    document.getElementById("app").innerHTML = `
+      <h2>Select an organization to set it as active</h2>
+      <div id="org-switcher"></div>
+    `;
 
-  // Gets a list of roles in the organization
-  currentOrganization.getRoles()
-    .then((res) => console.log(res))
-    .catch((error) => console.log("An error occurred:", error.errors));
+    const orgSwitcherDiv = document.getElementById("org-switcher");
+
+    clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+  }
 } else {
   document.getElementById("app").innerHTML = `
     <div id="sign-in"></div>
@@ -416,7 +500,7 @@ if (clerk.user) {
 }
 ```
 
-```html filename="index.html"
+```html filename="index.html" {19}
   <div id="app"></div>
 
   <!-- Initialize Clerk with your
@@ -433,13 +517,24 @@ if (clerk.user) {
     window.addEventListener("load", async function () {
       await Clerk.load();
       if (Clerk.user) {
-        // Get the current organization
-        const currentOrganization = Clerk.organization;
+        // Check for an active organization
+        if (Clerk.organization) {
+          await Clerk.organization.getRoles()
+            .then((res) => console.log(res))
+            .catch((error) => console.log("An error occurred:", error.errors));
+        } else {
+          // If there is no active organization,
+          // mount Clerk's <OrganizationSwitcher />
+          // to allow the user to set an organization as active
+          document.getElementById("app").innerHTML = `
+            <h2>Select an organization to set it as active</h2>
+            <div id="org-switcher"></div>
+          `;
 
-        // Gets a list of roles in the organization
-        currentOrganization.getRoles()
-          .then((res) => console.log(res))
-          .catch((error) => console.log("An error occurred:", error.errors));
+          const orgSwitcherDiv = document.getElementById("org-switcher");
+
+          Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+        }
       } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
@@ -458,7 +553,7 @@ if (clerk.user) {
 
 ## Additional methods
 
-In addition to the methods listed above, the `Organization` object also has the following methods:
+In addition to the methods listed on this page, the `Organization` object also has the following methods:
 
 ### Members
 
@@ -470,7 +565,7 @@ In addition to the methods listed above, the `Organization` object also has the 
 
 ### Invitations
 
-- [`getPendingInvitations()` (deprecated)](/docs/references/javascript/organization/invitations#get-pending-invitations)
+- [`getPendingInvitations()` (deprecated)](/docs/references/javascript/organization/invitations#get-pending-invitations-deprecated)
 - [`getInvitations()`](/docs/references/javascript/organization/invitations#get-invitations)
 - [`inviteMember()`](/docs/references/javascript/organization/invitations#invite-member)
 - [`inviteMembers()`](/docs/references/javascript/organization/invitations#invite-members)
