add callout about javascript qs to top of create metadata page

--- a/docs/references/javascript/user/create-metadata.mdx
+++ b/docs/references/javascript/user/create-metadata.mdx
@@ -7,6 +7,8 @@ description: Explore methods on the User object that help you create data for th
 
 These methods on the [`User`](/docs/references/javascript/user/user) object help you create data for the user, such as `createEmailAddress()` and `createPhoneNumber()`.
 
+The following examples assume that you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application.
+
 ## `createEmailAddress()`
 
 Adds an email address for the user. A new [`EmailAddress`][email-ref] will be created and associated with the user.
