--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -1,19 +1,25 @@
 ---
-title: Organization Members
-description: These are all methods on the Organization class that allow you to manage the members of an organization.
+title: Organization membership methods
+description: Learn about the methods on the Organization object that allow you to manage the members of an organization.
 ---
 
-# Organization Members
+# Organization membership methods
 
-These are all methods on the [Organization](/docs/references/javascript/organization/organization) class that allow you to manage the members of an organization.
+<Callout type="warning">
+  Organizations must be enabled in your Clerk settings for these methods to work. See the [Organizations overview](/docs/organizations/overview#enable-organizations-in-your-application) to learn more.
+</Callout>
+
+These methods on the [`Organization`](/docs/references/javascript/organization/organization) object allow you to manage the memberships of an organization.
+
+To see how all these methods work together, check out the [comprehensive example](#organization-membership-methods-example).
 
 ## `getMemberships()`
 
-```typescript
-function getMemberships(params?: GetMembersParams): Promise<PaginatedResponse<OrganizationMembership>>;
-```
+Retrieves the list of memberships for the currently active organization.
 
-Retrieve the members of the currently active organization.
+```typescript
+function getMemberships(params?: GetMembersParams): Promise<ClerkPaginatedResponse<OrganizationMembership>>;
+```
 
 ### `GetMembersParams`
 
@@ -21,44 +27,27 @@ Retrieve the members of the currently active organization.
 | --- | --- | --- |
 | `initialPage?` | `number` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
 | `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
-| `role` | `string` | The [roles](/docs/organizations/roles-permissions) of memberships that will be included in the response. |
+| `role?` | <code>[OrganizationCustomRoleKey](#organization-custom-role-key)[]</code> | The [roles](/docs/organizations/roles-permissions) of memberships that will be included in the response. |
 
-<Callout type="danger">
-  `GetMembershipsParams` was updated to `GetMembersParams` in September, 2023. The `limit` and `offset` parameters are now deprecated.
-</Callout>
+#### `OrganizationCustomRoleKey`
 
+`OrganizationCustomRoleKey` is a string that represents the user's role in the organization. Clerk provides the [default roles](/docs/organizations/roles-permissions#default-roles) `org:admin` and `org:member`. However, you can create [custom roles](/docs/organizations/create-roles-permissions) as well.
 
-### Returns
+### `getMemberships()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[PaginatedResponse][pag-ref]\<[OrganizationMembership][org-mem-ref]\>></code> | This method returns a `Promise` which resolves with a [`PaginatedResponse`][pag-ref] of [`OrganizationMembership`][org-mem-ref] objects. |
-
-## getMembershipRequests()
-
-Retrieve the membership requests of the currently active organization.
-
-```typescript
-function getMembershipRequests: (params?: GetMembershipRequestParams) => Promise<ClerkPaginatedResponse<OrganizationMembershipRequestResource>>;
-```
-
-### `GetMembershipRequestParams`
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `initialPage?` | `number` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
-| `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
-| `status?` | `string` | The status of the membership requests that will be included in the response. |
+| `Promise<ClerkPaginatedResponse<OrganizationMembership>>` | This method returns a `Promise` that resolves to a [`ClerkPaginatedResponse`][pag-ref] of [`OrganizationMembership`][org-mem-ref] objects. |
 
 ## `addMember()`
+
+Adds a user as a member to an organization. A user can only be added to an organization if they are not already a member of it and if they already exist in the same instance as the organization.
+
+Only administrators can add members to an organization.
 
 ```typescript
 function addMember(params: AddMemberParams): Promise<OrganizationMembership>;
 ```
-
-Adds a user as a member to an organization. A user can only be added to an organization if they are not already members of it and if they already exist in the same instance as the organization.
-
-Please note that only administrators can add members to an organization.
 
 ### `AddMemberParams`
 
@@ -67,19 +56,19 @@ Please note that only administrators can add members to an organization.
 | `userId` | `string` | The ID of the user that will be added as a member to the organization. |
 | `role` | `string` | The [role](/docs/organizations/roles-permissions) that the user will have in the organization. |
 
-### Returns
+### `addMember()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a `Promise` which resolves with the[`OrganizationMembership`][org-mem-ref] objects. |
+| `Promise<OrganizationMembership>` | This method returns a `Promise` that resolves to the [`OrganizationMembership`][org-mem-ref] object. |
 
 ## `updateMember()`
+
+Updates a member. Currently, only a user's role can be updated.
 
 ```typescript
 function updateMember(params: UpdateMembershipParams): Promise<OrganizationMembership>;
 ```
-
-Updates a member based on the `userId`. Currently, only a user's role can be updated.
 
 ### `UpdateMembershipParams`
 
@@ -88,31 +77,477 @@ Updates a member based on the `userId`. Currently, only a user's role can be upd
 | `userId` | `string` | The user identifier. |
 | `role` | `string` | The [role](/docs/organizations/roles-permissions) of the new member. |
 
-### Returns
+### `updateMember()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a `Promise` which resolves with the updated [`OrganizationMembership`][org-mem-ref] objects. |
+| `Promise<OrganizationMembership>` | This method returns a `Promise` that resolves to the updated [`OrganizationMembership`][org-mem-ref] object. |
 
 ## `removeMember()`
+
+Removes a member from the organization based on the `userId`.
 
 ```typescript
 function removeMember(userId: string): Promise<OrganizationMembership>;
 ```
 
-Removes a member from the organization based on the `userId`.
-
-### Properties
+### `removeMember()` parameters
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `userId` | `string` | The user identifier. |
 
-### Returns
+### `removeMember()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a `Promise` which resolves with the removed [`OrganizationMembership`][org-mem-ref] objects. |
+| `Promise<OrganizationMembership>` | This method returns a `Promise` that resolves to the removed [`OrganizationMembership`][org-mem-ref] object. |
+
+## Organization membership methods example
+
+The following example demonstrates how to use the organization membership methods to manage the members of an organization. To ease the development process, the response or error message of a method will be displayed on the user interface.
+
+<InjectKeys>
+
+<Tabs type="npm-script" items={['NPM module', '<script>']}>
+  <Tab>
+  For the following example, your HTML file should look like this:
+
+  ```html filename="index.html"
+  <!doctype html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Clerk + JavaScript App</title>
+      <style>
+        /* Style for the table */
+        table {
+          border-collapse: collapse; /* Collapse borders into a single border */
+          border: 1px solid black; /* Border for the entire table */
+        }
+
+        /* Style for table cells */
+        td,
+        th {
+          border: 1px solid black; /* Border for each cell */
+          padding: 2px; /* Optional: Add padding to cells */
+        }
+      </style>
+    </head>
+    <body>
+      <div id="app"></div>
+
+      <p id="error-container" hidden>
+        Error:
+        <span id="error-message"></span>
+      </p>
+
+      <h2>Memberships List</h2>
+      <table id="memberships_table">
+        <thead>
+          <tr>
+            <th>User ID</th>
+            <th>Identifier</th>
+            <th>Role</th>
+            <th id="update-role-head" hidden>Update role</th>
+            <th id="remove-member-head" hidden>Remove member</th>
+          </tr>
+        </thead>
+        <tbody id="memberships_table_body"></tbody>
+      </table>
+
+      <div id="add-member-container">
+        <h2>Add member</h2>
+        <input id="member-user-id" placeholder="Enter member's user ID" />
+        <button id="add-member">Add member</button>
+      </div>
+
+      <h2>Response:</p>
+      <pre id="response"></pre>
+
+      <script type="module" src="/main.js"></script>
+    </body>
+  </html>
+  ```
+
+  And your JavaScript file should look like this:
+
+  ```js filename="main.js" {13,41,60,79}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  if (clerk.user) {
+    // Check for an active organization
+    if (clerk.organization) {
+      // Render list of organization memberships
+      async function renderMemberships(organization, isAdmin) {
+        try {
+          const memberships = await organization.getMemberships();
+          console.log(`getMemberships:`, memberships);
+
+          memberships.map((membership) => {
+            const membershipTable = document.getElementById("memberships_table");
+            const row = membershipTable.insertRow();
+            row.insertCell().textContent = membership.publicUserData.userId;
+            row.insertCell().textContent = membership.publicUserData.identifier;
+            row.insertCell().textContent = membership.role;
+
+            // Add administrative actions:
+            // Add and remove a member, and update a member's role.
+            if (isAdmin) {
+              // Show add, update, remove member buttons
+              document.getElementById("add-member-container").removeAttribute("hidden");
+              document.getElementById("update-role-head").removeAttribute("hidden");
+              document.getElementById("remove-member-head").removeAttribute("hidden");
+
+              // Get the user ID of the member
+              const userId = membership.publicUserData.userId;
+
+              // Update a member's role
+              const updateBtn = document.createElement("button");
+              updateBtn.textContent = "Change role";
+              updateBtn.addEventListener("click", async function (e) {
+                e.preventDefault();
+                const role =
+                  membership.role === "org:admin" ? "org:member" : "org:admin";
+                await organization.updateMember({ userId, role })
+                  .then((res) => {
+                    document.getElementById("response").innerHTML =
+                      JSON.stringify(res);
+                  })
+                  .catch((error) => {
+                    document.getElementById("error-container").removeAttribute("hidden");
+                    document.getElementById("error-message").innerHTML =
+                      error.errors[0].longMessage;
+                    console.log("An error occurred:", error.errors);
+                  });
+              });
+              row.insertCell().appendChild(updateBtn);
+
+              // Remove a member
+              const removeBtn = document.createElement("button");
+              removeBtn.textContent = "Remove";
+              removeBtn.addEventListener("click", async function (e) {
+                e.preventDefault();
+                await organization.removeMember(userId)
+                  .then((res) => {
+                    document.getElementById("response").innerHTML =
+                      JSON.stringify(res);
+                  })
+                  .catch((error) => {
+                    document.getElementById("error-container").removeAttribute("hidden");
+                    document.getElementById("error-message").innerHTML =
+                      error.errors[0].longMessage;
+                    console.log("An error occurred:", error.errors);
+                  });
+              });
+              row.insertCell().appendChild(removeBtn);
+
+              // Add a new member to the organization
+              document.getElementById("add-member")
+                .addEventListener("click", () => {
+                  const userId = document.getElementById("member-user-id").value;
+
+                  organization.addMember({ userId, role: "org:member" })
+                    .then((res) => {
+                      document.getElementById("response").innerHTML =
+                        JSON.stringify(res);
+                    })
+                    .catch((error) => {
+                      document.getElementById("error-container").removeAttribute("hidden");
+                      document.getElementById("error-message").innerHTML =
+                        error.errors[0].longMessage;
+                      console.log("An error occurred:", error.errors);
+                    });
+                });
+            }
+          });
+        } catch (error) {
+          document.getElementById("error-container").removeAttribute("hidden");
+          document.getElementById("error-message").innerHTML =
+            error.errors[0].longMessage;
+          console.log("An error occurred:", error.errors);
+        }
+      }
+
+      /**
+       * Checks if a user is an admin of the
+       * currently active organization and
+       * renders the organization's memberships.
+       */
+      async function checkAdminAndRenderMemberships() {
+        const organizationId = clerk.organization.id;
+
+        const organizationMemberships =
+          await clerk.user.getOrganizationMemberships();
+
+        const currentMembership = organizationMemberships.find(
+          (membership) => membership.organization.id === organizationId
+        );
+        const currentOrganization = currentMembership.organization;
+
+        if (!currentOrganization) {
+          return;
+        }
+        const isAdmin = currentMembership.role === "org:admin";
+
+        console.log(`Organization:`, currentOrganization);
+
+        renderMemberships(currentOrganization, isAdmin);
+      }
+
+      checkAdminAndRenderMemberships();
+    } else {
+      // If there is no active organization,
+      // mount Clerk's <OrganizationSwitcher />
+      // to allow the user to set an organization as active
+      document.getElementById("app").innerHTML = `
+        <h2>Select an organization to set it as active</h2>
+        <div id="org-switcher"></div>
+      `;
+
+      const orgSwitcherDiv = document.getElementById("org-switcher");
+
+      clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+    }
+  } else {
+    document.getElementById("app").innerHTML = `
+      <div id="sign-in"></div>
+    `;
+
+    const signInDiv = document.getElementById("sign-in");
+
+    clerk.mountSignIn(signInDiv);
+  }
+  ```
+  </Tab>
+
+  <Tab>
+  ```html filename="index.html" {74,102,121,140}
+  <!doctype html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Clerk + JavaScript App</title>
+      <style>
+        /* Style for the table */
+        table {
+          border-collapse: collapse; /* Collapse borders into a single border */
+          border: 1px solid black; /* Border for the entire table */
+        }
+
+        /* Style for table cells */
+        td,
+        th {
+          border: 1px solid black; /* Border for each cell */
+          padding: 2px; /* Optional: Add padding to cells */
+        }
+      </style>
+    </head>
+    <body>
+      <div id="app"></div>
+
+      <p id="error-container" hidden>
+        Error:
+        <span id="error-message"></span>
+      </p>
+
+      <h2>Memberships List</h2>
+      <table id="memberships_table">
+        <thead>
+          <tr>
+            <th>User ID</th>
+            <th>Identifier</th>
+            <th>Role</th>
+            <th id="update-role-head" hidden>Update role</th>
+            <th id="remove-member-head" hidden>Remove member</th>
+          </tr>
+        </thead>
+        <tbody id="memberships_table_body"></tbody>
+      </table>
+
+      <div id="add-member-container">
+        <h2>Add member</h2>
+        <input id="member-user-id" placeholder="Enter member's user ID" />
+        <button id="add-member">Add member</button>
+      </div>
+
+      <h2>Response:</p>
+      <pre id="response"></pre>
+
+      <!-- Initialize Clerk with your
+      Clerk publishable key and Frontend API URL -->
+      <script
+        async
+        crossorigin="anonymous"
+        data-clerk-publishable-key='{{pub_key}}'
+        src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+        type="text/javascript"
+      ></script>
+
+      <script>
+        window.addEventListener("load", async function () {
+          await Clerk.load();
+
+          if (Clerk.user) {
+            // Check for an active organization
+            if (Clerk.organization) {
+              // Render list of organization memberships
+              async function renderMemberships(organization, isAdmin) {
+                try {
+                  const memberships = await organization.getMemberships();
+                  console.log(`getMemberships:`, memberships);
+
+                  memberships.map((membership) => {
+                    const membershipTable = document.getElementById("memberships_table");
+                    const row = membershipTable.insertRow();
+                    row.insertCell().textContent = membership.publicUserData.userId;
+                    row.insertCell().textContent = membership.publicUserData.identifier;
+                    row.insertCell().textContent = membership.role;
+
+                    // Add administrative actions:
+                    // Add and remove a member, and update a member's role.
+                    if (isAdmin) {
+                      // Show add, update, remove member buttons
+                      document.getElementById("add-member-container").removeAttribute("hidden");
+                      document.getElementById("update-role-head").removeAttribute("hidden");
+                      document.getElementById("remove-member-head").removeAttribute("hidden");
+
+                      // Get the user ID of the member
+                      const userId = membership.publicUserData.userId;
+
+                      // Update a member's role
+                      const updateBtn = document.createElement("button");
+                      updateBtn.textContent = "Change role";
+                      updateBtn.addEventListener("click", async function (e) {
+                        e.preventDefault();
+                        const role =
+                          membership.role === "org:admin" ? "org:member" : "org:admin";
+                        await organization.updateMember({ userId, role })
+                          .then((res) => {
+                            document.getElementById("response").innerHTML =
+                              JSON.stringify(res);
+                          })
+                          .catch((error) => {
+                            document.getElementById("error-container").removeAttribute("hidden");
+                            document.getElementById("error-message").innerHTML =
+                              error.errors[0].longMessage;
+                            console.log("An error occurred:", error.errors);
+                          });
+                      });
+                      row.insertCell().appendChild(updateBtn);
+
+                      // Remove a member
+                      const removeBtn = document.createElement("button");
+                      removeBtn.textContent = "Remove";
+                      removeBtn.addEventListener("click", async function (e) {
+                        e.preventDefault();
+                        await organization.removeMember(userId)
+                          .then((res) => {
+                            document.getElementById("response").innerHTML =
+                              JSON.stringify(res);
+                          })
+                          .catch((error) => {
+                            document.getElementById("error-container").removeAttribute("hidden");
+                            document.getElementById("error-message").innerHTML =
+                              error.errors[0].longMessage;
+                            console.log("An error occurred:", error.errors);
+                          });
+                      });
+                      row.insertCell().appendChild(removeBtn);
+
+                      // Add a new member to the organization
+                      document.getElementById("add-member")
+                        .addEventListener("click", () => {
+                          const userId = document.getElementById("member-user-id").value;
+
+                          organization.addMember({ userId, role: "org:member" })
+                          .then((res) => {
+                            document.getElementById("response").innerHTML =
+                              JSON.stringify(res);
+                          })
+                          .catch((error) => {
+                            document.getElementById("error-container").removeAttribute("hidden");
+                            document.getElementById("error-message").innerHTML =
+                              error.errors[0].longMessage;
+                            console.log("An error occurred:", error.errors);
+                          });
+                        });
+                    }
+                  });
+                } catch (error) {
+                  document.getElementById("error-container").removeAttribute("hidden");
+                  document.getElementById("error-message").innerHTML =
+                    error.errors[0].longMessage;
+                  console.log("An error occurred:", error.errors);
+                }
+              }
+
+              /**
+              * Checks if a user is an admin of the
+              * currently active organization and
+              * renders the organization's memberships.
+              */
+              async function checkAdminAndRenderMemberships() {
+                const organizationId = Clerk.organization.id;
+
+                const organizationMemberships =
+                  await Clerk.user.getOrganizationMemberships();
+
+                const currentMembership = organizationMemberships.find(
+                  (membership) => membership.organization.id === organizationId
+                );
+                const currentOrganization = currentMembership.organization;
+
+                if (!currentOrganization) {
+                  return;
+                }
+                const isAdmin = currentMembership.role === "org:admin";
+
+                console.log(`Organization:`, currentOrganization);
+
+                renderMemberships(currentOrganization, isAdmin);
+              }
+
+              checkAdminAndRenderMemberships();
+            } else {
+              // If there is no active organization,
+              // mount Clerk's <OrganizationSwitcher />
+              // to allow the user to set an organization as active
+              document.getElementById("app").innerHTML = `
+                <h2>Select an organization to set it as active</h2>
+                <div id="org-switcher"></div>
+              `;
+
+              const orgSwitcherDiv = document.getElementById("org-switcher");
+
+              Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+            }
+          } else {
+            document.getElementById("app").innerHTML = `
+              <div id="sign-in"></div>
+            `;
+
+            const signInDiv = document.getElementById("sign-in");
+
+            Clerk.mountSignIn(signInDiv);
+          }
+        });
+      </script>
+    </body>
+  </html>
+  ```
+  </Tab>
+</Tabs>
+
+</InjectKeys>
 
 [pag-ref]: /docs/references/javascript/types/clerk-paginated-response
 [org-mem-ref]: /docs/references/javascript/organization-membership
