--- a/docs/references/javascript/organization/invitations.mdx
+++ b/docs/references/javascript/organization/invitations.mdx
@@ -112,7 +112,7 @@ function getPendingInvitations(params?: GetPendingInvitationsParams): Promise<Or
 | `limit` | `number` | Limit of the results returned. |
 | `offset` | `number` | The offset of results to start the retrieval. |
 
-### `Returns`
+### `getPendingInvitations()` returns
 
 | Type | Description |
 | --- | --- |
