--- a/docs/references/javascript/organization/membership-request.mdx
+++ b/docs/references/javascript/organization/membership-request.mdx
@@ -1,18 +1,18 @@
 ---
-title: Organization membership request methods
-description: Learn about the methods on the Organization object that allow you to manage the membership requests for an organization.
+title: Organization membership requests
+description: These are methods on the Organization class that allow you to manage the membership requests for an organization.
 ---
 
-# Organization membership request methods
+# Organization membership requests
 
-These methods on the [`Organization`](/docs/references/javascript/organization/organization) object allow you to manage the membership requests for an organization.
+These are methods on the [Organization](/docs/references/javascript/organization/organization) class that allow you to manage the membership requests for an organization.
 
 ## `getMembershipRequests()`
 
 Retrieves a list of membership requests for the currently active organization.
 
 ```typescript
-function getMembershipRequests(params?: GetMembershipRequestParams): Promise<ClerkPaginatedResponse<OrganizationMembershipRequest>>;
+function getMembershipRequests(params?: GetMembershipRequestParams): Promise<PaginatedResources<OrganizationMembershipRequest>>;
 ```
 
 ### `GetMembershipRequestParams`
@@ -23,69 +23,11 @@ function getMembershipRequests(params?: GetMembershipRequestParams): Promise<Cle
 | `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
 | `status?` | `'pending' \| 'accepted' \| 'revoked'` | The status a request can have. |
 
-### `getMembershipRequests()` returns
+### Returns
 
 | Type | Description |
 | --- | --- |
-| `Promise<PaginatedResponse<OrganizationMembershipRequest>>` | This method returns a `Promise` that resolves to a [`ClerkPaginatedResponse`](/docs/references/javascript/types/clerk-paginated-response) of [`OrganizationMembershipRequest`](/docs/references/javascript/organization-membership-request) objects. |
+| <code>Promise\<[PaginatedResponse][pag-res-ref]\<[OrganizationMembershipRequest][mem-request-ref]\>></code> | This method returns a `Promise` which resolves with a list of `OrganizationMembershipRequest` objects. |
 
-### `getMembershipRequests()` example
-
-<InjectKeys>
-
-<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-```js filename="main.js"
-import Clerk from '@clerk/clerk-js';
-
-// Initialize Clerk with your Clerk publishable key
-const clerk = new Clerk('{{pub_key}}');
-await clerk.load();
-
-if (clerk.user) {
-  await clerk.organization.createDomain("test-domain.com")
-    .then((res) => console.log(res))
-    .catch((error) => console.log("An error occurred:", error.errors));
-} else {
-  document.getElementById("app").innerHTML = `
-    <div id="sign-in"></div>
-  `;
-
-  const signInDiv = document.getElementById("sign-in");
-
-  clerk.mountSignIn(signInDiv);
-}
-```
-
-```html filename="index.html"
-  <div id="app"></div>
-
-  <!-- Initialize Clerk with your
-  Clerk publishable key and Frontend API URL -->
-  <script
-    async
-    crossorigin="anonymous"
-    data-clerk-publishable-key='{{pub_key}}'
-    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
-    type="text/javascript"
-  ></script>
-
-  <script>
-    window.addEventListener("load", async function () {
-      await Clerk.load();
-      if (Clerk.user) {
-        await Clerk.organization.createDomain("test-domain.com")
-          .then((res) => console.log(res))
-          .catch((error) => console.log("An error occurred:", error.errors));
-      } else {
-        document.getElementById("app").innerHTML = `
-          <div id="sign-in"></div>
-        `;
-        const signInDiv = document.getElementById("sign-in");
-        Clerk.mountSignIn(signInDiv);
-      }
-    });
-  </script>
-```
-</CodeBlockTabs>
-
-</InjectKeys>
+[mem-request-ref]: /docs/references/javascript/organization-membership-request
+[pag-res-ref]: /docs/references/javascript/types/clerk-paginated-response
