check for active org in code examples

--- a/docs/references/javascript/organization/invitations.mdx
+++ b/docs/references/javascript/organization/invitations.mdx
@@ -42,9 +42,24 @@ const clerk = new Clerk('{{pub_key}}');
 await clerk.load();
 
 if (clerk.user) {
-  await clerk.organization.getInvitations()
-    .then((res) => console.log(res))
-    .catch((error) => console.log("An error occurred:", error.errors));
+  // Check for an active organization
+  if (clerk.organization) {
+    await clerk.organization.getInvitations()
+      .then((res) => console.log(res))
+      .catch((error) => console.log("An error occurred:", error.errors));
+  } else {
+    // If there is no active organization,
+    // mount Clerk's <OrganizationSwitcher />
+    // to allow the user to set an organization as active
+    document.getElementById("app").innerHTML = `
+      <h2>Select an organization to set it as active</h2>
+      <div id="org-switcher"></div>
+    `;
+
+    const orgSwitcherDiv = document.getElementById("org-switcher");
+
+    clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+  }
 } else {
   document.getElementById("app").innerHTML = `
     <div id="sign-in"></div>
@@ -74,9 +89,24 @@ if (clerk.user) {
       await Clerk.load();
 
       if (Clerk.user) {
-        await Clerk.organization.getInvitations()
-          .then((res) => console.log(res))
-          .catch((error) => console.log("An error occurred:", error.errors));
+        // Check for an active organization
+        if (Clerk.organization) {
+          await Clerk.organization.getInvitations()
+            .then((res) => console.log(res))
+            .catch((error) => console.log("An error occurred:", error.errors));
+        } else {
+          // If there is no active organization,
+          // mount Clerk's <OrganizationSwitcher />
+          // to allow the user to set an organization as active
+          document.getElementById("app").innerHTML = `
+            <h2>Select an organization to set it as active</h2>
+            <div id="org-switcher"></div>
+          `;
+
+          const orgSwitcherDiv = document.getElementById("org-switcher");
+
+          Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+        }
       } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
@@ -152,12 +182,26 @@ const clerk = new Clerk('{{pub_key}}');
 await clerk.load();
 
 if (clerk.user) {
-  const emailAddress = "test@test.com";
-  const role = "org:member";
+  if (clerk.organization) {
+    const emailAddress = "test@test.com";
+    const role = "org:member";
 
-  await clerk.organization.inviteMember({ emailAddress, role })
-    .then((res) => console.log(res))
-    .catch((error) => console.log("An error occurred:", error.errors));
+    await clerk.organization.inviteMember({ emailAddress, role })
+      .then((res) => console.log(res))
+      .catch((error) => console.log("An error occurred:", error.errors));
+  } else {
+    // If there is no active organization,
+    // mount Clerk's <OrganizationSwitcher />
+    // to allow the user to set an organization as active
+    document.getElementById("app").innerHTML = `
+      <h2>Select an organization to set it as active</h2>
+      <div id="org-switcher"></div>
+    `;
+
+    const orgSwitcherDiv = document.getElementById("org-switcher");
+
+    clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+  }
 } else {
   document.getElementById("app").innerHTML = `
     <div id="sign-in"></div>
@@ -187,12 +231,26 @@ if (clerk.user) {
       await Clerk.load();
 
       if (Clerk.user) {
-        const emailAddress = "test@test.com";
-        const role = "org:member";
+        if (Clerk.organization) {
+          const emailAddress = "test@test.com";
+          const role = "org:member";
 
-        await Clerk.organization.inviteMember({ emailAddress, role })
-          .then((res) => console.log(res))
-          .catch((error) => console.log("An error occurred:", error.errors));
+          await Clerk.organization.inviteMember({ emailAddress, role })
+            .then((res) => console.log(res))
+            .catch((error) => console.log("An error occurred:", error.errors));
+        } else {
+          // If there is no active organization,
+          // mount Clerk's <OrganizationSwitcher />
+          // to allow the user to set an organization as active
+          document.getElementById("app").innerHTML = `
+            <h2>Select an organization to set it as active</h2>
+            <div id="org-switcher"></div>
+          `;
+
+          const orgSwitcherDiv = document.getElementById("org-switcher");
+
+          Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+        }
       } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
@@ -243,12 +301,26 @@ const clerk = new Clerk('{{pub_key}}');
 await clerk.load();
 
 if (clerk.user) {
-  const emailAddresses = ["test@test.com", "test2@test.com", "test3@test.com"];
-  const role = "org:member";
+  if (clerk.organization) {
+    const emailAddresses = ["test@test.com", "test2@test.com", "test3@test.com"];
+    const role = "org:member";
 
-  await clerk.organization.inviteMember({ emailAddresses, role })
-    .then((res) => console.log(res))
-    .catch((error) => console.log("An error occurred:", error.errors));
+    await clerk.organization.inviteMember({ emailAddresses, role })
+      .then((res) => console.log(res))
+      .catch((error) => console.log("An error occurred:", error.errors));
+  } else {
+    // If there is no active organization,
+    // mount Clerk's <OrganizationSwitcher />
+    // to allow the user to set an organization as active
+    document.getElementById("app").innerHTML = `
+      <h2>Select an organization to set it as active</h2>
+      <div id="org-switcher"></div>
+    `;
+
+    const orgSwitcherDiv = document.getElementById("org-switcher");
+
+    clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+  }
 } else {
   document.getElementById("app").innerHTML = `
     <div id="sign-in"></div>
@@ -278,12 +350,26 @@ if (clerk.user) {
       await Clerk.load();
 
       if (Clerk.user) {
-        const emailAddresses = ["test@test.com", "test2@test.com", "test3@test.com"];
-        const role = "org:member";
+        if (Clerk.organization) {
+          const emailAddresses = ["test@test.com", "test2@test.com", "test3@test.com"];
+          const role = "org:member";
 
-        await clerk.organization.inviteMember({ emailAddresses, role })
-          .then((res) => console.log(res))
-          .catch((error) => console.log("An error occurred:", error.errors));
+          await Clerk.organization.inviteMember({ emailAddresses, role })
+            .then((res) => console.log(res))
+            .catch((error) => console.log("An error occurred:", error.errors));
+        } else {
+          // If there is no active organization,
+          // mount Clerk's <OrganizationSwitcher />
+          // to allow the user to set an organization as active
+          document.getElementById("app").innerHTML = `
+            <h2>Select an organization to set it as active</h2>
+            <div id="org-switcher"></div>
+          `;
+
+          const orgSwitcherDiv = document.getElementById("org-switcher");
+
+          Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+        }
       } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
