add syntax highlighting

--- a/docs/references/javascript/organization/invitations.mdx
+++ b/docs/references/javascript/organization/invitations.mdx
@@ -34,7 +34,7 @@ function getInvitations(params?: GetInvitationsParams): Promise<PaginatedResourc
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-```js filename="main.js"
+```js filename="main.js" {10}
 import Clerk from '@clerk/clerk-js';
 
 // Initialize Clerk with your Clerk publishable key
@@ -71,7 +71,7 @@ if (clerk.user) {
 }
 ```
 
-```html filename="index.html"
+```html filename="index.html" {20}
   <div id="app"></div>
 
   <!-- Initialize Clerk with your
@@ -174,7 +174,7 @@ function inviteMember(params: InviteMemberParams): Promise<OrganizationInvitatio
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-```js filename="main.js"
+```js filename="main.js" {12}
 import Clerk from '@clerk/clerk-js';
 
 // Initialize Clerk with your Clerk publishable key
@@ -213,7 +213,7 @@ if (clerk.user) {
 }
 ```
 
-```html filename="index.html"
+```html filename="index.html" {22}
   <div id="app"></div>
 
   <!-- Initialize Clerk with your
@@ -293,7 +293,7 @@ function inviteMembers(params: InviteMembersParams): Promise<OrganizationInvitat
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-```js filename="main.js"
+```js filename="main.js" {12}
 import Clerk from '@clerk/clerk-js';
 
 // Initialize Clerk with your Clerk publishable key
@@ -332,7 +332,7 @@ if (clerk.user) {
 }
 ```
 
-```html filename="index.html"
+```html filename="index.html" {22}
   <div id="app"></div>
 
   <!-- Initialize Clerk with your
