add 'these examples assume' copy

--- a/docs/references/javascript/organization/invitations.mdx
+++ b/docs/references/javascript/organization/invitations.mdx
@@ -7,6 +7,11 @@ description: Learn about the methods on the Organization object that allow you t
 
 These methods on the [`Organization`](/docs/references/javascript/organization/organization) object allow you to manage the invitations to an organization.
 
+The following examples assume:
+
+- you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application
+- you have [enabled the Organizations feature in your Clerk Dashboard](/docs/organizations/overview#enable-organizations-in-your-application)
+
 ## `getInvitations()`
 
 Retrieves the list of invitations for the currently active organization.
